@@ -1,11 +1,12 @@
 # Multi Deep Research Demo
 
-基于 `agent-runtime-java` 的多 agent 深度调研示例：root DeepAgent 组织远端 search sub-agent 完成主题调研，产出包含对比矩阵、图表和引用的报告，并把每一次问答持久化到工作目录，供后续跨会话回顾。
+基于 `agent-runtime-java` 的多 agent 深度调研示例：root DeepAgent 组织远端 search / verify sub-agent 完成主题调研，产出包含对比矩阵、图表、引用与覆盖判定的报告，并把每一次问答持久化到工作目录，供后续跨会话回顾。
 
 本 demo 展示 solution 层如何在**不侵入 core-java**、**库层无 Spring** 的两层约束下装配一个完整的 DeepAgent 应用：
 
-- **A2A 远端 sub-agent 注入**：通过 `agent-runtime-ext-java` 的 `RemoteA2aToolInstaller`，把远端 A2A agent card 自动注册为 root DeepAgent 的工具
+- **A2A 远端 sub-agent 注入**：通过 `agent-runtime-ext-java` 的 `RemoteA2aToolInstaller`，把远端 A2A agent card 自动注册为 root DeepAgent 的工具（本 demo 内注入 `search-agent` 和 `verify-agent` 两个远端子代理）
 - **沙箱可视化**：通过 `SandboxRail` / `UrlVerifyRail` 把 pandas / matplotlib / urllib 代码送到 jiuwenbox 沙箱执行，产出对比表 Markdown、PNG 图表和 URL 可达性验证
+- **LLM 覆盖判定**：`verify-agent` 是纯 LLM judge（无工具），在 COMPARISON 模式下由 root 强制调 1 次，检查草稿是否覆盖 对比矩阵 / 引用来源 / 置信度 三项 anchor —— 属"best-effort 质量闸"，失败绝不阻塞交付
 - **长期记忆**：通过 `AutoPersistMemoryRail` 的 `afterInvoke` 钩子确定性落盘问答对，支持同会话消息历史回顾和跨会话 `memory_search` 召回
 
 ---
@@ -40,23 +41,24 @@
                     │    └── UrlVerifyRail                 │  verify_urls
                     │                                      │
                     │   Tools（运行时注入）                 │
-                    │    └── search-agent (A2A remote)     │  RemoteA2aToolInstaller
-                    └──────┬────────────────────────┬──────┘
-                           │                        │
-             A2A / streaming                Python execute
-                           │                        │
-                           ▼                        ▼
-                ┌────────────────────┐   ┌──────────────────────┐
-                │ search-agent       │   │ jiuwenbox sandbox    │
-                │ ReActAgent         │   │ (HTTP, pandas /      │
-                │   • web_search     │   │  matplotlib /        │
-                │   • Tavily / Stub  │   │  urllib)             │
-                └────────────────────┘   └──────────────────────┘
+                    │    ├── search-agent  (A2A remote)    │  RemoteA2aToolInstaller
+                    │    └── verify-agent  (A2A remote)    │  RemoteA2aToolInstaller
+                    └──────┬──────────────┬─────────┬──────┘
+                           │              │         │
+             A2A / streaming     A2A / SSE     Python execute
+                           │              │         │
+                           ▼              ▼         ▼
+        ┌────────────────────┐  ┌──────────────┐  ┌──────────────────────┐
+        │ search-agent       │  │ verify-agent │  │ jiuwenbox sandbox    │
+        │ ReActAgent         │  │ ReActAgent   │  │ (HTTP, pandas /      │
+        │   • web_search     │  │ (LLM judge,  │  │  matplotlib /        │
+        │   • Tavily / Stub  │  │  no tools)   │  │  urllib)             │
+        └────────────────────┘  └──────────────┘  └──────────────────────┘
 ```
 
 两层约束：
 
-- **库层**（`agent-deep-research`、`agent-search`）：仅依赖 `agent-core-java`。无 Spring、无 `agent-service-*`。切换 runtime 时库代码不变。
+- **库层**（`agent-deep-research`、`agent-search`、`agent-verify`）：仅依赖 `agent-core-java`（`agent-verify` 额外依赖 `react-rails`）。无 Spring、无 `agent-service-*`。切换 runtime 时库代码不变。
 - **wrapper 层**（`*-runtime`）：Spring Boot 装配，负责 `@ConfigurationProperties`、SPI 暴露、`SandboxClient → SandboxOps` 适配、A2A 远端注册。
 
 ---
@@ -67,43 +69,52 @@
 multi-deep-research-demo/
 ├── pom.xml                             ← parent (packaging=pom)
 │
-├── agent-deep-research/                ← 库层：root DeepAgent
-│   └── src/main/java/com/openjiuwen/example/deepresearch/
-│       ├── DeepResearchProperties.java     配置 POJO + system prompt
-│       ├── DeepResearchAgentFactory.java   props + sandboxOpsSupplier → DeepAgent
-│       └── rail/
-│           ├── AutoPersistMemoryRail.java  extends MemoryRail；afterInvoke 落盘
-│           ├── SandboxRail.java            render_comparison_table / render_chart
-│           ├── UrlVerifyRail.java          verify_urls
-│           ├── SandboxOps.java             库层窄接口：executeCode / downloadFile
-│           └── ExecResult.java             record: (ok, exitCode, stdout, stderr, message)
-│
-├── agent-deep-research-runtime/        ← wrapper：Spring Boot 应用
-│   ├── src/main/java/.../runtime/
-│   │   ├── DeepResearchRuntimeApplication.java  Spring 装配；SandboxClient → SandboxOps 适配
-│   │   └── DeepResearchSpringProperties.java    继承库层 Properties 加 @ConfigurationProperties
+├── agent-deep-research/                ← root DeepAgent（SDK + Spring Boot runtime 同模块，按包名分层）
+│   ├── src/main/java/com/openjiuwen/example/deepresearch/
+│   │   ├── DeepResearchProperties.java     配置 POJO + system prompt
+│   │   ├── DeepResearchAgentFactory.java   props + sandboxOpsSupplier → DeepAgent
+│   │   ├── rail/
+│   │   │   ├── AutoPersistMemoryRail.java  extends MemoryRail；afterInvoke 落盘
+│   │   │   ├── SandboxRail.java            render_comparison_table / render_chart
+│   │   │   ├── UrlVerifyRail.java          verify_urls
+│   │   │   ├── SandboxOps.java             库层窄接口：executeCode / downloadFile
+│   │   │   └── ExecResult.java             record: (ok, exitCode, stdout, stderr, message)
+│   │   └── runtime/                        ← Spring Boot 层
+│   │       ├── DeepResearchRuntimeApplication.java  Spring 装配；SandboxClient → SandboxOps 适配
+│   │       └── DeepResearchSpringProperties.java    继承库层 Properties 加 @ConfigurationProperties
 │   └── src/main/resources/
 │       ├── application.yml                        主配置
 │       └── application-redis-checkpointer.yml     可选 profile：把 checkpointer 切到 Redis
 │
-├── agent-search/                       ← 库层：search sub-agent（ReActAgent）
-│   └── src/main/java/.../search/
-│       ├── SearchAgentProperties.java
-│       ├── SearchAgentFactory.java             props → ReActAgent + web_search 工具
-│       ├── WebSearchProvider.java              pluggable 后端 SPI
-│       ├── TavilyWebSearchProvider.java        prod 走 https://api.tavily.com
-│       ├── StubWebSearchProvider.java          fixture 走本地 JSON
-│       ├── WebSearchTool.java / StubWebSearchTool.java   工具入口
-│       ├── DomainReranker.java                 official ×2, blog ×0.7
-│       ├── SourceKindClassifier.java           host → official/blog/news/forum
-│       └── WebSearchResultSerializer.java      wire 格式
+├── agent-search/                       ← search sub-agent（ReActAgent）（SDK + Spring Boot runtime 同模块，按包名分层）
+│   ├── src/main/java/com/openjiuwen/example/deepresearch/search/
+│   │   ├── SearchAgentProperties.java
+│   │   ├── SearchAgentFactory.java             props → ReActAgent + web_search 工具
+│   │   ├── WebSearchProvider.java              pluggable 后端 SPI
+│   │   ├── TavilyWebSearchProvider.java        prod 走 https://api.tavily.com
+│   │   ├── StubWebSearchProvider.java          fixture 走本地 JSON
+│   │   ├── WebSearchTool.java / StubWebSearchTool.java   工具入口
+│   │   ├── DomainReranker.java                 official ×2, blog ×0.7
+│   │   ├── SourceKindClassifier.java           host → official/blog/news/forum
+│   │   ├── WebSearchResultSerializer.java      wire 格式
+│   │   └── runtime/                            ← Spring Boot 层
+│   │       ├── SearchAgentRuntimeApplication.java
+│   │       └── SearchAgentSpringProperties.java
+│   └── src/main/resources/application.yml
 │
-└── agent-search-runtime/               ← wrapper：search agent Spring Boot 应用
-    ├── src/main/java/.../search/runtime/
-    │   ├── SearchAgentRuntimeApplication.java
-    │   └── SearchAgentSpringProperties.java
+└── agent-verify/                       ← verify sub-agent（ReActAgent LLM judge，无工具）（SDK + runtime 同模块，按包名分层）
+    ├── src/main/java/com/openjiuwen/example/deepresearch/verify/
+    │   ├── VerifyAgentProperties.java          配置 + criteria = ["对比矩阵已覆盖", "引用来源已覆盖", "置信度已覆盖"]
+    │   ├── VerifyAgentFactory.java             props → ReActAgent + react-rails 手动装配
+    │   ├── RailStateObserver.java              观测 CriteriaReplanBridgeRail 分支决策
+    │   └── runtime/                            ← Spring Boot 层
+    │       ├── VerifyAgentRuntimeApplication.java
+    │       ├── VerifyAgentSpringProperties.java
+    │       └── A2aMetadataLoggingFilter.java   OncePerRequestFilter：wire 层记录 params.metadata / params.message.metadata
     └── src/main/resources/application.yml
 ```
+
+三个模块的 fat jar 可以彼此独立部署：`agent-deep-research` 是 root（默认端口 18090），`agent-search` 和 `agent-verify` 是被 A2A 调用的 sub-agent（默认端口 18091 / 18093）。
 
 ---
 
@@ -113,14 +124,16 @@ multi-deep-research-demo/
 |---|---|---|---|
 | 主题拆解 + 任务循环 | DeepAgent task loop | core-java（`DeepAgent`）+ solution 侧 `system-prompt` | `enableTaskLoop=true`、`maxIterations` |
 | Web 搜索（子 agent） | ReActAgent + tool | `agent-search` | root 通过 A2A 调 `search-agent`；`RemoteA2aToolInstaller` 每轮把远端 card 注入为工具 |
+| 报告覆盖判定（子 agent） | ReActAgent LLM judge（无工具） | `agent-verify` | root 通过 A2A 调 `verify-agent`；COMPARISON 模式下 **强制调用 1 次**（草稿渲染完 → 写正文前），SINGLE 模式跳过。react-rails 内部走 `CriteriaReplanBridgeRail` + `RootCauseRail` 保底 |
 | 对比表 + 图表可视化 | Harness tool | `SandboxRail` → Python + pandas/matplotlib，在 jiuwenbox 沙箱执行 | LLM 调 `render_comparison_table` / `render_chart` |
 | URL 可达性验证 | Harness tool | `UrlVerifyRail` → Python urllib，在沙箱执行 | LLM 调 `verify_urls` |
 | 长期记忆读写 | MemoryRail tools | core-java 提供 `write_memory` / `read_memory` / `memory_search` / `memory_get` / `edit_memory` | LLM 显式调用或 rail 自动写 |
 | **确定性落盘** | Rail 生命周期钩子 | `AutoPersistMemoryRail.afterInvoke` | 每次 `result_type=="answer"` 自动写 `memory/answer-*.md` + `reports/answer-*.md` |
 | 多轮上下文 | Checkpointer | in-memory（默认）或 Redis（`application-redis-checkpointer.yml`，支持 standalone / cluster） | 同 `conversationId` 请求走同一状态 |
 | 中文字体 | 沙箱代码内置 | `SandboxRail` Python 头部 | Noto Sans CJK SC → Microsoft YaHei → DejaVu Sans 降级 |
+| Wire 层 metadata 观测 | Servlet filter | `agent-verify` 的 `A2aMetadataLoggingFilter`（`OncePerRequestFilter` + `ContentCachingRequestWrapper`） | 每次 `/a2a` POST 打一行 `[A2A wire] verify-agent received: {method, contextId, params.metadata, params.message.metadata}`，用于 FEAT-004 §Metadata 转发验收 |
 
-`search-agent` 支持 `stub` profile 用本地 fixture 演示，无需 Tavily key；prod profile 需要 `TAVILY_API_KEY`。
+`search-agent` 支持 `stub` profile 用本地 fixture 演示，无需 Tavily key；prod profile 需要 `TAVILY_API_KEY`。`verify-agent` 是纯 LLM judge，只需 LLM 环境变量，无外部依赖。
 
 ### Sub-agent 路由约束（root prompt 硬规则）
 
@@ -147,7 +160,28 @@ Root DeepAgent 面对 A2A remote tool（`search-agent`）时，`system-prompt` �
 
 除以上明列的三种模式，`search-agent` 一律**优先 `web_search`**，不许自造新歧义。
 
-**（3）`web_search` 工具的注册路径**：`SearchAgentFactory` 用 `Runner.resourceMgr().addTool(webSearchTool, agent.getCard().getId())` 把工具注册到 agent-scoped 资源管理器（而不是全局），随后向 `agent.getAbilityManager().add(toolCard)` 补挂 card。这样多个 agent 各自持有自己的工具实例，jsonrpc getTask 也能正确回显 tool card。
+**（3）verify-agent 调用规则（COMPARISON 模式硬约束）**：
+
+Root 系统提示词里额外规定：如果 tool list 里存在 `verify-agent` 且当前是 COMPARISON 模式（多值对比），root **必须**在 `render_comparison_table` 返回后、写自然语言答复前**恰好调用 1 次** `verify-agent`，`remoteInput` 传草稿报告 markdown（含对比矩阵 + 引用 + 置信度），把 verdict 附在答复的"Report verification (best-effort judge)"小节。若 verify-agent 不可达 / 超时，记 `verify-agent unavailable — proceeding without external judgement` 后立即写正文 —— 这是**质量闸而非交付闸，绝不能阻塞最终答复**。SINGLE 模式（单值查询）直接跳过（没有 draft 可判）。
+
+对应源码：`DeepResearchProperties.system-prompt` 的 "Verification pass via verify-agent" 段 + `agent-verify` 的 `VerifyAgentProperties.criteria = ["对比矩阵已覆盖", "引用来源已覆盖", "置信度已覆盖"]`（happy-path 短语作 substring 匹配 anchor）。
+
+**verify-agent 内部：react-rails 承担的判定循环与容错**：
+
+verify-agent 是一个纯 LLM judge，本身没有工具，其"判定 → 兜底 → 观测"三件事完全由 `agent-runtime-ext-java` 的 **react-rails** 组件承担。`VerifyAgentFactory.build()` 手动挂 3 条 rail + 1 个观测钩子（避免 BeanPostProcessor 隐式装配，保持 SDK 层无 Spring）：
+
+| Rail | 类别 | 职责 |
+|---|---|---|
+| `CriteriaReplanBridgeRail` + `RuleBasedCriteriaVerifier` | 判定 | 每轮 LLM 输出交给 verifier 按 `criteria` substring 匹配打分：**PASS** → `forceFinish(verified)` 立即出结论；**FAIL** → 推送 steering hint（"缺哪几个 anchor"）→ 触发下一轮 replan；**replan 次数耗尽** → `forceFinish(degraded)` 也不阻塞交付 |
+| `ReplanRail(maxReplan)` | 判定预算 | 全局共享计数器，`max-replan=1` 默认允许 1 次 steer 重试（配合 `max-iterations=2` 总共最多跑 2 轮 ReAct） |
+| `RootCauseRail` | 兜底容错 | 底层 model client 抛异常（网络 / gateway 5xx）时**直接降级**，不做 `maxIterations` 空转，配合 root 的 "verify-agent unavailable" 兜底路径 |
+| `ReactRailsObservability.install(agent)` | 观测 | 挂 rail 事件监听，把每轮 decision（PASS/FAIL/DEGRADED、steering hint 内容、violation 明细）打到 slf4j，用于事后回放 |
+
+组合效果：verify-agent 不需要在 SDK 层自己写循环 / 重试 / 熔断代码，全靠 rail 装配。判定策略要变（多加 criteria / 关闭 replan / 换 verifier 实现）只改 [VerifyAgentFactory.java](common/example/multi-deep-research-demo/agent-verify/src/main/java/com/openjiuwen/example/deepresearch/verify/VerifyAgentFactory.java) 装配层，`ReActAgent` 本体不动 —— 这也是 react-rails "把认知增强能力独立成可组合 rail" 的核心价值。
+
+对应源码：[VerifyAgentFactory.build()](common/example/multi-deep-research-demo/agent-verify/src/main/java/com/openjiuwen/example/deepresearch/verify/VerifyAgentFactory.java#L49-L94) 的 rail 装配段；rail 实现在 `agent-runtime-ext-java` 的 `com.openjiuwen.agents.reactrails.*` 包。
+
+**（4）`web_search` 工具的注册路径**：`SearchAgentFactory` 用 `Runner.resourceMgr().addTool(webSearchTool, agent.getCard().getId())` 把工具注册到 agent-scoped 资源管理器（而不是全局），随后向 `agent.getAbilityManager().add(toolCard)` 补挂 card。这样多个 agent 各自持有自己的工具实例，jsonrpc getTask 也能正确回显 tool card。
 
 ---
 
@@ -173,8 +207,9 @@ mvn "-Dmaven.repo.local=.m2\repository" `
 产物（可独立运行的 Spring Boot fat jar，各约 180 MB）：
 
 ```
-agent-deep-research-runtime/target/agent-deep-research-runtime-0.1.0-SNAPSHOT.jar
-agent-search-runtime/target/agent-search-runtime-0.1.0-SNAPSHOT.jar
+agent-deep-research/target/agent-deep-research-0.1.0.jar   ← root（默认端口 18090）
+agent-search/target/agent-search-0.1.0.jar                 ← search sub-agent（默认端口 18091）
+agent-verify/target/agent-verify-0.1.0.jar                 ← verify sub-agent（默认端口 18093）
 ```
 
 ---
@@ -186,14 +221,14 @@ agent-search-runtime/target/agent-search-runtime-0.1.0-SNAPSHOT.jar
 - **Java 17+**（字节码 `--release 17`，JDK 26 启动也兼容）
 - **jiuwenbox 沙箱**（可选，用于表图 + URL 验证）：需先启动 `jiuwenbox-server`，暴露 `http://<host>:8321`。若不启用，`SANDBOX_ENABLED=false` 时 rail 不注册对应工具，报告改为"仅文本 + 未验证 URL"格式。
 - **Redis**（可选，用于多轮对话跨进程复用）：启用 `--spring.profiles.active=redis-checkpointer` 时需要
-- **网络出站**：LLM base URL 可达；`agent-search` 走 Tavily 时需要访问 `https://api.tavily.com`
+- **网络出站**：LLM base URL 可达；`agent-search` 走 Tavily 时需要访问 `https://api.tavily.com`；`agent-verify` 只需 LLM base URL 可达（无第三方 API 依赖）
 
 ### 环境变量
 
-deep-research 和 search-agent 共享同一组 LLM 环境变量：
+deep-research、search-agent、verify-agent 三个进程共享同一组 LLM 环境变量：
 
 ```bash
-# LLM（两个进程都用）
+# LLM（三个进程都用）
 export LLM_PROVIDER=OpenAI            # OpenAI 兼容 provider 名
 export LLM_API_KEY=<your-llm-key>
 export LLM_API_BASE=https://api.deepseek.com
@@ -206,30 +241,50 @@ export TAVILY_API_KEY=<your-tavily-key>
 # 沙箱（可选，用于表图 + URL 验证；未设则 rail 不注册）
 export SANDBOX_ENABLED=true
 export SANDBOX_URL=http://127.0.0.1:8321
+
+# 远端 sub-agent 地址（deep-research 用来找 search / verify）
+export SEARCH_AGENT_URL=http://127.0.0.1:18091
+export VERIFY_AGENT_URL=http://127.0.0.1:18093
 ```
 
 ### 启动顺序
 
-推荐先起 search-agent 再起 deep-research（先起 deep-research 也不会崩，`A2AAgentCardDiscovery` 会每 30s 重试拉 card，但 card 拿到前 root 看不到 search 工具）。
+推荐顺序：先起两个 sub-agent（search-agent、verify-agent），再起 root（deep-research）。root 先起也不会崩，`A2AAgentCardDiscovery` 会每 30s 重试拉 card，但 card 拿到前 root 看不到对应工具（tool list 里没有 `search-agent` / `verify-agent`，COMPARISON 模式的 verify 硬约束会走 `verify-agent unavailable` 兜底分支）。
+
+JDK 17+ 上启用 `redis-checkpointer` 时必须加 `--add-opens java.base/java.time=ALL-UNNAMED`：`RedisTaskStore` 通过 A2A SDK 的 Gson 反射序列化 `Task`（含 `OffsetDateTime` 字段），需要打开 `java.time` 模块。runtime-java `RedisTaskStore.java` 源码注释已说明此约束。in-memory 模式不受影响。
 
 ```bash
 # 1. 启动 search-agent（端口 18091）
-nohup java -jar agent-search-runtime-0.1.0-SNAPSHOT.jar \
+nohup java \
+  --add-opens java.base/java.time=ALL-UNNAMED \
+  -jar agent-search-0.1.0.jar \
   > search-agent.log 2>&1 &
 echo $! > search-agent.pid
 
-# 等 Ready 后确认 agent card 可达
-tail -f search-agent.log     # 看到 "Started SearchAgentRuntimeApplication"
-curl -s http://127.0.0.1:18091/.well-known/agent-card.json | head -20
+# 2. 启动 verify-agent（端口 18093，纯 LLM judge，无外部依赖）
+nohup java \
+  --add-opens java.base/java.time=ALL-UNNAMED \
+  -jar agent-verify-0.1.0.jar \
+  > verify-agent.log 2>&1 &
+echo $! > verify-agent.pid
 
-# 2. 启动 deep-research-agent（端口 18090）
+# 等 Ready 后确认两个 sub-agent 的 agent card 可达
+tail -n 20 search-agent.log verify-agent.log     # 分别看到 "Started SearchAgentRuntimeApplication" / "Started VerifyAgentRuntimeApplication"
+curl -s http://127.0.0.1:18091/.well-known/agent-card.json | head -20
+curl -s http://127.0.0.1:18093/.well-known/agent-card.json | head -20
+
+# 3. 启动 deep-research-agent（端口 18090）
 export SEARCH_AGENT_URL=http://127.0.0.1:18091
-nohup java -jar agent-deep-research-runtime-0.1.0-SNAPSHOT.jar \
+export VERIFY_AGENT_URL=http://127.0.0.1:18093
+nohup java \
+  --add-opens java.base/java.time=ALL-UNNAMED \
+  -jar agent-deep-research-0.1.0.jar \
   > deep-research.log 2>&1 &
 echo $! > deep-research.pid
 
-# 3. 确认 deep-research 启动 + 远端 card 发现成功
+# 4. 确认 deep-research 启动 + 两个远端 card 都发现成功
 grep -E "Started DeepResearchRuntimeApplication|Discovered remote agent" deep-research.log
+# 应看到两行 "Discovered remote agent 'search-agent'" / "Discovered remote agent 'verify-agent'"
 ```
 
 启用 Redis checkpointer：
@@ -250,13 +305,22 @@ export REDIS_PASSWORD=<plaintext-or-blank>
 export CHECKPOINTER_TTL_SECONDS=86400              # 1 天；yml 默认同值
 
 # search-runtime（18091）
-java -jar agent-search-runtime-*.jar \
+java --add-opens java.base/java.time=ALL-UNNAMED \
+  -jar agent-search-*.jar \
+  --spring.profiles.active=redis-checkpointer
+
+# verify-runtime（18093）
+java --add-opens java.base/java.time=ALL-UNNAMED \
+  -jar agent-verify-*.jar \
   --spring.profiles.active=redis-checkpointer
 
 # deep-research-runtime（18090）
-java -jar agent-deep-research-runtime-0.1.0-SNAPSHOT.jar \
+java --add-opens java.base/java.time=ALL-UNNAMED \
+  -jar agent-deep-research-0.1.0.jar \
   --spring.profiles.active=redis-checkpointer
 ```
+
+> 注：`agent-verify` 目前不携带 `application-redis-checkpointer.yml` profile —— verify-agent 本身是无状态 LLM judge，一次调用即完成判定，不依赖 checkpointer 状态。上面一行 `--spring.profiles.active=redis-checkpointer` 对 verify-runtime 是空操作，可省略。写在这里只是为了三个 runtime 命令并列易读。
 
 Redis Cluster 部署时把 `REDIS_TYPE` 切成 `cluster`，并用 Spring Boot 的 indexed 语法追加 `nodes[N]` 参数（每个节点一条 `host:port`）：
 
@@ -264,7 +328,8 @@ Redis Cluster 部署时把 `REDIS_TYPE` 切成 `cluster`，并用 Spring Boot �
 export REDIS_TYPE=cluster
 export REDIS_PASSWORD=              # 集群无密码时留空
 
-java -jar agent-search-runtime-*.jar \
+java --add-opens java.base/java.time=ALL-UNNAMED \
+  -jar agent-search-*.jar \
   --spring.profiles.active=redis-checkpointer \
   --openjiuwen.service.middleware.redis.default.nodes[0]=<host>:7001 \
   --openjiuwen.service.middleware.redis.default.nodes[1]=<host>:7002 \
@@ -291,7 +356,7 @@ Cluster 模式下 `database` 会被自动忽略，日志会额外多一行 `data
 ### 停止
 
 ```bash
-kill $(cat deep-research.pid) $(cat search-agent.pid)
+kill $(cat deep-research.pid) $(cat search-agent.pid) $(cat verify-agent.pid)
 ```
 
 ---
@@ -321,14 +386,23 @@ $env:LLM_MODEL    = "deepseek-chat"
 ```powershell
 $env:SEARCH_AGENT_PORT = "18091"
 mvn "-Dmaven.repo.local=.m2\repository" `
-  -f "common\example\multi-deep-research-demo\agent-search-runtime\pom.xml" `
+  -f "common\example\multi-deep-research-demo\agent-search\pom.xml" `
   spring-boot:run "-Dspring-boot.run.profiles=stub" `
   "-Dspring-boot.run.arguments=--openjiuwen.demo.search-agent.api-key=any-dummy"
 
 # prod profile（真 Tavily）
 $env:TAVILY_API_KEY = "<your-tavily-key>"
 mvn "-Dmaven.repo.local=.m2\repository" `
-  -f "common\example\multi-deep-research-demo\agent-search-runtime\pom.xml" `
+  -f "common\example\multi-deep-research-demo\agent-search\pom.xml" `
+  spring-boot:run
+```
+
+启动 verify-agent（新开一个终端；LLM env 沿用上面）：
+
+```powershell
+$env:VERIFY_AGENT_PORT = "18093"
+mvn "-Dmaven.repo.local=.m2\repository" `
+  -f "common\example\multi-deep-research-demo\agent-verify\pom.xml" `
   spring-boot:run
 ```
 
@@ -336,22 +410,33 @@ mvn "-Dmaven.repo.local=.m2\repository" `
 
 ```powershell
 $env:DEEP_RESEARCH_PORT = "18090"
+$env:SEARCH_AGENT_URL   = "http://127.0.0.1:18091"
+$env:VERIFY_AGENT_URL   = "http://127.0.0.1:18093"
 # 可选：启用沙箱能力
 # $env:SANDBOX_ENABLED = "true"
 # $env:SANDBOX_URL     = "http://127.0.0.1:8321"
 
 mvn "-Dmaven.repo.local=.m2\repository" `
-  -f "common\example\multi-deep-research-demo\agent-deep-research-runtime\pom.xml" `
+  -f "common\example\multi-deep-research-demo\agent-deep-research\pom.xml" `
   spring-boot:run
 ```
 
-A2A 入口地址：`http://127.0.0.1:18090/a2a/`
+A2A 入口地址：`http://127.0.0.1:18090/a2a/`（root）、`http://127.0.0.1:18091/a2a/`（search 直连）、`http://127.0.0.1:18093/a2a/`（verify 直连）
 
 ---
 
 ## 端到端调用
 
 所有调用都走标准 A2A JSON-RPC 协议 —— endpoint `http://<host>:18090/a2a/`，`method` 用 `SendStreamingMessage`（流式）或 `SendMessage`（非流），`params.message.parts[0].text` 放调研主题，`params.message.contextId` 是多轮对话的会话键（跟 core-java checkpointer 的 conversationId 一一对应）。
+
+请求示例里的对比类问题（"对比 A 和 B 的定价……"）走 COMPARISON 模式，root 会依次触发：
+1. `search-agent` 抓官方定价
+2. `render_comparison_table` 生成对比矩阵图 + Markdown
+3. `verify_urls` 沙箱侧验证引用 URL 可达性
+4. **`verify-agent`** 判定草稿是否覆盖 对比矩阵 / 引用来源 / 置信度（COMPARISON 模式硬约束，1 次；失败/超时不阻塞交付）
+5. 写自然语言最终答复
+
+单值查询（"DeepSeek V3 上下文长度多少"）走 SINGLE 模式，只调 `search-agent`，跳过 render / verify-agent（没有 draft 可判）。
 
 ### 流式调用（curl）
 
@@ -426,15 +511,17 @@ $reader.ReadToEnd()
 
 ## 配置字段速查
 
-`agent-deep-research-runtime/src/main/resources/application.yml` 关键字段：
+`agent-deep-research/src/main/resources/application.yml` 关键字段：
 
 | 字段 | 默认 | 说明 |
 |---|---|---|
 | `server.port` | `18090` | HTTP 端口 |
 | `openjiuwen.service.handler` | `agentcore-ext` | 走 `JiuwenCoreAgentExtHandler`，激活 A2A 远端注入 |
 | `openjiuwen.service.a2a.skills[0].id` | `deep_research` | A2A agent card 声明的技能 |
-| `openjiuwen.service.a2a.remote-agents[].name` | `search-agent` | 远端 sub-agent 名，`RemoteA2aToolInstaller` 用它把 card 注入为工具 |
-| `openjiuwen.service.a2a.remote-agents[].url` | `${SEARCH_AGENT_URL}` | 远端 sub-agent HTTP 地址 |
+| `openjiuwen.service.a2a.remote-agents[0].name` | `search-agent` | 远端搜索 sub-agent 名，`RemoteA2aToolInstaller` 用它把 card 注入为工具 |
+| `openjiuwen.service.a2a.remote-agents[0].url` | `${SEARCH_AGENT_URL}` | 远端搜索 sub-agent HTTP 地址 |
+| `openjiuwen.service.a2a.remote-agents[1].name` | `verify-agent` | 远端 verify sub-agent 名（COMPARISON 模式强制调 1 次） |
+| `openjiuwen.service.a2a.remote-agents[1].url` | `${VERIFY_AGENT_URL:http://127.0.0.1:18093}` | 远端 verify sub-agent HTTP 地址 |
 | `openjiuwen.service.external.sandbox.enabled` | `${SANDBOX_ENABLED:false}` | 是否启用沙箱工具（关掉则 `SandboxRail` / `UrlVerifyRail` 不注册） |
 | `openjiuwen.service.external.sandbox.servers[0].service-url` | `${SANDBOX_URL:http://127.0.0.1:8321}` | jiuwenbox 服务地址 |
 | `openjiuwen.service.external.sandbox.servers[0].idle-ttl-seconds` | `300` | 沙箱空闲回收秒数 |
@@ -447,7 +534,19 @@ $reader.ReadToEnd()
 | `openjiuwen.demo.deep-research.workspace-path` | `target/deep-research-workspace` | 记忆和报告落盘根目录 |
 | `openjiuwen.demo.deep-research.system-prompt` | 内置 | 含 A2A 调用规范、memory 工具文档、sandbox 工具契约、迭代预算硬规则 |
 
-`application-redis-checkpointer.yml` 里的 Redis 字段（`openjiuwen.service.middleware.redis.default.*`、`openjiuwen.service.middleware.checkpointer.ttl-seconds`）通过 `--spring.profiles.active=redis-checkpointer` 激活。`agent-search-runtime` 有一份镜像 profile，env 变量同名，两个 runtime 共享同一个 Redis 实例（同 host/port/db/password）。
+`application-redis-checkpointer.yml` 里的 Redis 字段（`openjiuwen.service.middleware.redis.default.*`、`openjiuwen.service.middleware.checkpointer.ttl-seconds`）通过 `--spring.profiles.active=redis-checkpointer` 激活。`agent-search` 有一份镜像 profile，env 变量同名，两个 runtime 共享同一个 Redis 实例（同 host/port/db/password）。`agent-verify` 目前不带 redis profile（无状态 judge，不需要 checkpointer）。
+
+`agent-verify/src/main/resources/application.yml` 关键字段：
+
+| 字段 | 默认 | 说明 |
+|---|---|---|
+| `server.port` | `18093` | HTTP 端口 |
+| `openjiuwen.service.handler` | `agentcore` | 走 `JiuwenCoreAgentHandler`（无需 A2A 远端注入） |
+| `openjiuwen.service.a2a.skills[0].id` | `verify_report` | agent card 声明的技能 |
+| `openjiuwen.demo.verify-agent.max-iterations` | `${VERIFY_AGENT_MAX_ITERATIONS:2}` | ReAct 循环上限（judge 通常 1-2 轮即出结论） |
+| `openjiuwen.demo.verify-agent.max-replan` | `${VERIFY_AGENT_MAX_REPLAN:1}` | react-rails `CriteriaReplanBridgeRail` 允许的 steer 次数；1 = 允许 1 次判定失败后 push steering hint 再试 1 轮 |
+| `openjiuwen.demo.verify-agent.criteria` | `["对比矩阵已覆盖", "引用来源已覆盖", "置信度已覆盖"]` | happy-path 短语：`RuleBasedCriteriaVerifier` 用 substring 匹配决定 PASS/FAIL |
+| `openjiuwen.demo.verify-agent.system-prompt` | 内置 | 严格输出格式（`判定通过`/`判定不通过` + `<anchor>已覆盖`/`<anchor>缺失`），配合 criteria 做规则匹配 |
 
 ### Redis key 命名与多 runtime 共用同一 Redis 的隔离
 
@@ -473,7 +572,7 @@ $reader.ReadToEnd()
 
 | 场景 | 行为 |
 |---|---|
-| 同 `contextId` 的 A2A 父子派单（本 demo：deep-research → search-agent） | 故意让父子共享 sessionId 前缀，实现状态共享；子 agent 由 core-java 追加 `_1_1` 之类后缀落到 entityId 上，不会撞车 |
+| 同 `contextId` 的 A2A 父子派单（本 demo：deep-research → search-agent / verify-agent） | 故意让父子共享 sessionId 前缀，实现状态共享；子 agent 由 core-java 追加 `_1_1` 之类后缀落到 entityId 上，不会撞车 |
 | 同一应用的不同会话/不同用户 | 只要各自 `contextId` 不同即不冲突（正常业务方生成的 `contextId` 通常带 UUID 或时间戳） |
 | 两个**不相干应用**恰好用了相同 `contextId`（如都手写 `ctx-test-001`） | 会互相踩，checkpointer 数据互相覆盖 |
 
@@ -483,7 +582,7 @@ $reader.ReadToEnd()
 2. **每 runtime 独占 Redis database**（只对 standalone 有效；cluster 下 `database` 被自动忽略，启动日志的 `databaseIgnored=N` 就是这事）。
 3. **每 runtime 独占 Redis 实例**（最彻底，但需要多实例部署）。
 
-本 demo 里 deep-research + search-agent 共用同一 Redis 是**必要设计**（父子共享 sessionId 才能跨进程 recall）；如果以后要跟别的应用共用同一 Redis，做法 1 就够了。
+本 demo 里 deep-research + search-agent 共用同一 Redis 是**必要设计**（父子共享 sessionId 才能跨进程 recall）；verify-agent 无状态、不写 checkpointer，共不共享 Redis 都无影响。如果以后要跟别的应用共用同一 Redis，做法 1 就够了。
 
 ---
 
